<resources>
    <string name="app_name">Smart Walking Cane</string>
    <string name="status_safe">Status Aman</string>
    <string name="status_sos">SOS TERAKTIFKAN!</string>
    <string name="light_on">Matikan Lampu</string>
    <string name="light_off">Nyalakan Lampu</string>
    <string name="sos">SOS</string>
    <string name="sos_active">SOS: Aktif</string>
    <string name="sos_inactive">SOS: Tidak Aktif</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="google_maps_key" />

    <string name="location_info">Mendapatkan lokasi pengguna...</string>
    <string name="respond">Tanggapi</string>
    <string name="google_maps_key">AIzaSyAOVYRIgupAurZup5y1PRh8Ismb1A3lLao</string>

</resources>